Página de cadastro de evento concluída, adição de Roboto em todos os CSS

--- a/pages/adicionar-evento.html
+++ b/pages/adicionar-evento.html
@@ -124,8 +124,7 @@
                 <div class="right-group">
                     <div class="form-group">
                         <label for="foto">Banner ou Foto do Evento</label>
-                        <input type="file" id="foto" name="foto" accept="image/*" onchange="mostrarPreview(event)"
-                            required>
+                        <input type="file" id="foto" name="foto" accept="image/*" onchange="mostrarPreview(event)">
                     </div>
                 </div>
             </div>
@@ -214,78 +213,11 @@
                 </div>
             </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <div class="cad-events">
+                <label for="submit"></label>
+                <input type="submit" value="Cadastrar evento">
+            </div>
         </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </section>
 
 
