Adição de card de eventos/shows, fazer estilização

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -31,7 +31,8 @@
                 <form action="/buscar" method="GET">
                     <div class="search-bar">
                         <i class="fas fa-search"></i>
-                        <input type="search" id="search" name="search" placeholder="Pesquisar eventos, shows..." required>
+                        <input type="search" id="search" name="search" placeholder="Pesquisar eventos, shows..."
+                            required>
                     </div>
                 </form>
 
@@ -51,7 +52,42 @@
 
 
 
+
+
     <section id="shows-cards">
+        <div class="cards-tittle-description">
+            <div class="tittle-description">
+                <h1 class="tittle-inicio">Shows</h1>
+                <p class="text-inicio">Fique por dentro dos melhores shows e garanta já o seu ingresso com praticidade
+                    pelo
+                    Ingressa</p>
+            </div>
+        </div>
+
+        <div class="cards">
+            <div class="image-event">
+                <img class="event-image" src="/assets/img/teste-fotomcpaiva.png" alt="Imagem do Evento">
+            </div>
+
+            <div class="card-content">
+                <div class="cards-add">
+                    <span class="title-cards">Título do Evento aqui!</span>
+                    <p class="description-cards">Insira a descrição do evento aqui, como local, horas ou artistas!</p>
+                </div>
+
+                <div class="cards-date-day-time">
+                    <div class="date-day-time">
+                        <span class="date">Sábado</span>
+                        <span class="day">26 de Abril</span>
+                        <span class="time">22 Horas</span>
+                    </div>
+
+                    <div class="ingress-add">
+                        <button class="ingress-button">Ingressos</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 
