Cards estilizados, colocar cards lado a lado

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -27,7 +27,6 @@
             </nav>
 
             <div class="header-actions">
-
                 <form action="/buscar" method="GET">
                     <div class="search-bar">
                         <i class="fas fa-search"></i>
@@ -38,57 +37,97 @@
 
             </div>
 
-
             <div class="profile-icon">
                 <a href="/perfil"> <!-- Ajustei o link para algo mais relevante -->
                     <i class="fas fa-user"></i> <!-- Ícone do perfil -->
                 </a>
             </div>
-
         </header>
     </section>
 
-
-
-
-
-
-
-    <section id="shows-cards">
+    <section id="cards">
         <div class="cards-tittle-description">
-            <div class="tittle-description">
-                <h1 class="tittle-inicio">Shows</h1>
-                <p class="text-inicio">Fique por dentro dos melhores shows e garanta já o seu ingresso com praticidade
-                    pelo
-                    Ingressa</p>
-            </div>
+            <h1 class="tittle-inicio">Shows</h1>
+            <p class="text-inicio">Fique por dentro dos melhores shows e garanta já o seu ingresso com praticidade
+                pelo
+                Ingressa</p>
         </div>
 
-        <div class="cards">
-            <div class="image-event">
-                <img class="event-image" src="/assets/img/teste-fotomcpaiva.png" alt="Imagem do Evento">
+
+        <section id="cards-content">
+            <div class="cards-image">
+                <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
             </div>
 
-            <div class="card-content">
-                <div class="cards-add">
-                    <span class="title-cards">Título do Evento aqui!</span>
-                    <p class="description-cards">Insira a descrição do evento aqui, como local, horas ou artistas!</p>
+            <div class="cards-title-description">
+                <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
+                <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
+                    placeat
+                    omnis nemo pariatur
+                    veritatis reprehenderit ex voluptates rem, dolores</p>
+            </div>
+
+            <div class="cards-information">
+                <div class="cards-date">
+                    <div class="cards-dayweek">
+                        <span>Sábado</span>
+                    </div>
+                    <span>26 de Abril</span>
+                    <span> - </span>
+                    <span>22h</span>
                 </div>
 
-                <div class="cards-date-day-time">
-                    <div class="date-day-time">
-                        <span class="date">Sábado</span>
-                        <span class="day">26 de Abril</span>
-                        <span class="time">22 Horas</span>
-                    </div>
-
-                    <div class="ingress-add">
-                        <button class="ingress-button">Ingressos</button>
-                    </div>
+                <div class="cards-ingresso">
+                    <button>Ingressos</button>
                 </div>
             </div>
-        </div>
+        </section>
     </section>
+
+    <section id="cards">
+        <div class="cards-tittle-description">
+            <h1 class="tittle-inicio">Shows</h1>
+            <p class="text-inicio">Fique por dentro dos melhores shows e garanta já o seu ingresso com praticidade
+                pelo
+                Ingressa</p>
+        </div>
+
+
+        <section id="cards-content">
+            <div class="cards-image">
+                <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
+            </div>
+
+            <div class="cards-title-description">
+                <span class="title-card">Título nao coloque um titulo grande!</span>
+                <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
+                    placeat
+                    omnis nemo pariatur
+                    veritatis reprehenderit ex voluptates rem, dolores</p>
+            </div>
+
+            <div class="cards-information">
+                <div class="cards-date">
+                    <div class="cards-dayweek">
+                        <span>Sábado</span>
+                    </div>
+                    <span>26 de Abril</span>
+                    <span> - </span>
+                    <span>22h</span>
+                </div>
+
+                <div class="cards-ingresso">
+                    <button>Ingressos</button>
+                </div>
+            </div>
+        </section>
+    </section>
+
+
+
+
+
+
 
 
 
