Ajustes na estilização e adição de eventos na página html

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -53,34 +53,122 @@
                 Ingressa</p>
         </div>
 
+        <section class="cards-junction">
+            <section id="cards-content">
+                <div class="cards-image">
+                    <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
+                </div>
 
-        <section id="cards-content">
-            <div class="cards-image">
-                <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
-            </div>
+                <div class="cards-title-description">
+                    <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
+                        placeat
+                        omnis nemo pariatur
+                        veritatis reprehenderit ex voluptates rem, dolores</p>
+                </div>
 
-            <div class="cards-title-description">
-                <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
-                <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
-                    placeat
-                    omnis nemo pariatur
-                    veritatis reprehenderit ex voluptates rem, dolores</p>
-            </div>
-
-            <div class="cards-information">
-                <div class="cards-date">
-                    <div class="cards-dayweek">
-                        <span>Sábado</span>
+                <div class="cards-information">
+                    <div class="cards-date">
+                        <div class="cards-dayweek">
+                            <span>Sábado</span>
+                        </div>
+                        <span>26 de Abril</span>
+                        <span> - </span>
+                        <span>22h</span>
                     </div>
-                    <span>26 de Abril</span>
-                    <span> - </span>
-                    <span>22h</span>
+
+                    <div class="cards-ingresso">
+                        <button>Ingressos</button>
+                    </div>
+                </div>
+            </section>
+
+            <section id="cards-content">
+                <div class="cards-image">
+                    <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
                 </div>
 
-                <div class="cards-ingresso">
-                    <button>Ingressos</button>
+                <div class="cards-title-description">
+                    <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
+                        placeat
+                        omnis nemo pariatur
+                        veritatis reprehenderit ex voluptates rem, dolores</p>
                 </div>
-            </div>
+
+                <div class="cards-information">
+                    <div class="cards-date">
+                        <div class="cards-dayweek">
+                            <span>Sábado</span>
+                        </div>
+                        <span>26 de Abril</span>
+                        <span> - </span>
+                        <span>22h</span>
+                    </div>
+
+                    <div class="cards-ingresso">
+                        <button>Ingressos</button>
+                    </div>
+                </div>
+            </section>
+
+            <section id="cards-content">
+                <div class="cards-image">
+                    <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
+                </div>
+
+                <div class="cards-title-description">
+                    <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
+                        placeat
+                        omnis nemo pariatur
+                        veritatis reprehenderit ex voluptates rem, dolores</p>
+                </div>
+
+                <div class="cards-information">
+                    <div class="cards-date">
+                        <div class="cards-dayweek">
+                            <span>Sábado</span>
+                        </div>
+                        <span>26 de Abril</span>
+                        <span> - </span>
+                        <span>22h</span>
+                    </div>
+
+                    <div class="cards-ingresso">
+                        <button>Ingressos</button>
+                    </div>
+                </div>
+            </section>
+
+            <section id="cards-content">
+                <div class="cards-image">
+                    <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
+                </div>
+
+                <div class="cards-title-description">
+                    <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
+                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
+                        placeat
+                        omnis nemo pariatur
+                        veritatis reprehenderit ex voluptates rem, dolores</p>
+                </div>
+
+                <div class="cards-information">
+                    <div class="cards-date">
+                        <div class="cards-dayweek">
+                            <span>Sábado</span>
+                        </div>
+                        <span>26 de Abril</span>
+                        <span> - </span>
+                        <span>22h</span>
+                    </div>
+
+                    <div class="cards-ingresso">
+                        <button>Ingressos</button>
+                    </div>
+                </div>
+            </section>
         </section>
     </section>
 
