Iniciando adição de card com JavaScript

--- a/pages/adicionar-evento.html
+++ b/pages/adicionar-evento.html
@@ -54,7 +54,7 @@
                 valores do seu evento.</p>
         </div>
 
-        <form action="" method="post">
+        <form action="" id="events-forms" method="post">
             <div class="events-cadaster">
                 <div class="left-group">
                     <div class="form-group">
@@ -221,7 +221,7 @@
     </section>
 
 
-
+    <script src="/scripts/cadastro.js"></script>
 </body>
 
 </html>
