--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -82,132 +82,6 @@
                     </div>
                 </div>
             </section>
-
-            <section id="cards-content">
-                <div class="cards-image">
-                    <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
-                </div>
-
-                <div class="cards-title-description">
-                    <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
-                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
-                        placeat
-                        omnis nemo pariatur
-                        veritatis reprehenderit ex voluptates rem, dolores</p>
-                </div>
-
-                <div class="cards-information">
-                    <div class="cards-date">
-                        <div class="cards-dayweek">
-                            <span>Sábado</span>
-                        </div>
-                        <span>26 de Abril</span>
-                        <span> - </span>
-                        <span>22h</span>
-                    </div>
-
-                    <div class="cards-ingresso">
-                        <button>Ingressos</button>
-                    </div>
-                </div>
-            </section>
-
-            <section id="cards-content">
-                <div class="cards-image">
-                    <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
-                </div>
-
-                <div class="cards-title-description">
-                    <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
-                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
-                        placeat
-                        omnis nemo pariatur
-                        veritatis reprehenderit ex voluptates rem, dolores</p>
-                </div>
-
-                <div class="cards-information">
-                    <div class="cards-date">
-                        <div class="cards-dayweek">
-                            <span>Sábado</span>
-                        </div>
-                        <span>26 de Abril</span>
-                        <span> - </span>
-                        <span>22h</span>
-                    </div>
-
-                    <div class="cards-ingresso">
-                        <button>Ingressos</button>
-                    </div>
-                </div>
-            </section>
-
-            <section id="cards-content">
-                <div class="cards-image">
-                    <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
-                </div>
-
-                <div class="cards-title-description">
-                    <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
-                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
-                        placeat
-                        omnis nemo pariatur
-                        veritatis reprehenderit ex voluptates rem, dolores</p>
-                </div>
-
-                <div class="cards-information">
-                    <div class="cards-date">
-                        <div class="cards-dayweek">
-                            <span>Sábado</span>
-                        </div>
-                        <span>26 de Abril</span>
-                        <span> - </span>
-                        <span>22h</span>
-                    </div>
-
-                    <div class="cards-ingresso">
-                        <button>Ingressos</button>
-                    </div>
-                </div>
-            </section>
-        </section>
-    </section>
-
-    <section id="cards">
-        <div class="cards-tittle-description">
-            <h1 class="tittle-inicio">Shows</h1>
-            <p class="text-inicio">Fique por dentro dos melhores shows e garanta já o seu ingresso com praticidade
-                pelo
-                Ingressa</p>
-        </div>
-
-
-        <section id="cards-content">
-            <div class="cards-image">
-                <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Show">
-            </div>
-
-            <div class="cards-title-description">
-                <span class="title-card">Título nao coloque um titulo grande!</span>
-                <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
-                    placeat
-                    omnis nemo pariatur
-                    veritatis reprehenderit ex voluptates rem, dolores</p>
-            </div>
-
-            <div class="cards-information">
-                <div class="cards-date">
-                    <div class="cards-dayweek">
-                        <span>Sábado</span>
-                    </div>
-                    <span>26 de Abril</span>
-                    <span> - </span>
-                    <span>22h</span>
-                </div>
-
-                <div class="cards-ingresso">
-                    <button>Ingressos</button>
-                </div>
-            </div>
         </section>
     </section>
 
@@ -238,7 +112,7 @@
 
 
 
-
+<script src="/scripts/inicio.js"></script>
 </body>
 
 </html>
