Adição de card com cadastro de usuário, modificações em alguns arquivos, correções

--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -21,13 +21,13 @@
             <nav>
                 <ul>
                     <li><a href="/pages/inicio.html">Início</a></li>
-                    <li><a href="/carrinho">Carrinho</a></li>
+                    <li><a href="/pages/adicionar-evento.html">Carrinho</a></li>
                     <li><a href="/locais">Locais</a></li>
                 </ul>
             </nav>
 
             <div class="header-actions">
-                <form action="/buscar" method="GET">
+                <form action="" method="GET">
                     <div class="search-bar">
                         <i class="fas fa-search"></i>
                         <input type="search" id="search" name="search" placeholder="Pesquisar eventos, shows..."
@@ -45,14 +45,18 @@
         </header>
     </section>
 
-    <section id="cards">
+    <section id="shows-description">
         <div class="cards-tittle-description">
             <h1 class="tittle-inicio">Shows</h1>
             <p class="text-inicio">Fique por dentro dos melhores shows e garanta já o seu ingresso com praticidade
                 pelo
                 Ingressa</p>
         </div>
+    </section>
 
+
+
+    <section id="cards">
         <section class="cards-junction">
             <section id="cards-content">
                 <div class="cards-image">
@@ -61,10 +65,9 @@
 
                 <div class="cards-title-description">
                     <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
-                    <p class="description-card">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate
-                        placeat
-                        omnis nemo pariatur
-                        veritatis reprehenderit ex voluptates rem, dolores</p>
+                    <p class="description-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                        perspiciatis quasi molestiae officia sunt ratione similique eveniet cumque ipsa, quis minus nam,
+                        aut ipsum omnis recusandae illum assumenda fugit distinctio!</p>
                 </div>
 
                 <div class="cards-information">
@@ -112,7 +115,7 @@
 
 
 
-<script src="/scripts/inicio.js"></script>
+    <script src="/scripts/inicio.js"></script>
 </body>
 
 </html>
