--- a/pages/adicionar-evento.html
+++ b/pages/adicionar-evento.html
@@ -59,7 +59,7 @@
                 <div class="left-group">
                     <div class="form-group">
                         <label for="nome">Nome do Evento</label>
-                        <input type="text" id="nome" name="nome" placeholder="Digite o título do evento" required>
+                        <input type="text" id="nome" name="nome" maxlength="65" placeholder="Digite o título do evento" required>
                     </div>
 
                     <div class="form-group">
@@ -74,14 +74,14 @@
 
                     <div class="form-group">
                         <label for="preco">Preço do Evento</label>
-                        <input type="number" id="preco" name="preco" placeholder="Digite o preço do ingresso" required>
+                        <input type="text" id="preco" name="preco" step="0.01" min="0" placeholder="Digite o preço do ingresso" required>
                     </div>
                 </div>
 
                 <div class="right-group">
                     <div class="form-group">
                         <label for="descricao">Descrição do Evento</label>
-                        <textarea id="descricao" name="descricao" placeholder="Escreva uma descrição sobre o evento"
+                        <textarea id="descricao" name="descricao" placeholder="Escreva uma descrição sobre o evento" maxlength="300"
                             rows="4" required></textarea>
                     </div>
                 </div>
