--- a/pages/login.html
+++ b/pages/login.html
@@ -29,8 +29,8 @@
                 </p>
             </div>
 
-            <div class="forms-login"></div>
-            <form action="/login" method="POST">
+            <div class="forms-cadastro"></div>
+            <form id="forms-logar">
 
                 <div class="input-email">
                     <i class="fas fa-envelope"></i> <!-- Ícone de envelope -->
@@ -60,7 +60,7 @@
     </section>
 
 
-
+    <script src="/scripts/login.js"></script>
 </body>
 
 </html>
