Adição de informações básicas do perfil com possibilidade de edição

--- a/pages/adicionar-evento.html
+++ b/pages/adicionar-evento.html
@@ -40,7 +40,7 @@
 
 
             <div class="profile-icon">
-                <a href="/perfil"> <!-- Ajustei o link para algo mais relevante -->
+                <a href="/pages/perfil.html"> <!-- Ajustei o link para algo mais relevante -->
                     <i class="fas fa-user"></i> <!-- Ícone do perfil -->
                 </a>
             </div>
@@ -59,7 +59,8 @@
                 <div class="left-group">
                     <div class="form-group">
                         <label for="nome">Nome do Evento</label>
-                        <input type="text" id="nome" name="nome" maxlength="65" placeholder="Digite o título do evento" required>
+                        <input type="text" id="nome" name="nome" maxlength="65" placeholder="Digite o título do evento"
+                            required>
                     </div>
 
                     <div class="form-group">
@@ -74,15 +75,16 @@
 
                     <div class="form-group">
                         <label for="preco">Preço do Evento</label>
-                        <input type="text" id="preco" name="preco" step="0.01" min="0" placeholder="Digite o preço do ingresso" required>
+                        <input type="text" id="preco" name="preco" step="0.01" min="0"
+                            placeholder="Digite o preço do ingresso" required>
                     </div>
                 </div>
 
                 <div class="right-group">
                     <div class="form-group">
                         <label for="descricao">Descrição do Evento</label>
-                        <textarea id="descricao" name="descricao" placeholder="Escreva uma descrição sobre o evento" maxlength="300"
-                            rows="4" required></textarea>
+                        <textarea id="descricao" name="descricao" placeholder="Escreva uma descrição sobre o evento"
+                            maxlength="300" rows="4" required></textarea>
                     </div>
                 </div>
             </div>
