--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="profile-icon">
-                <a href="/perfil"> <!-- Ajustei o link para algo mais relevante -->
+                <a href="/pages/perfil.html"> <!-- Ajustei o link para algo mais relevante -->
                     <i class="fas fa-user"></i> <!-- Ícone do perfil -->
                 </a>
             </div>
