Dados básicos para editar e section do Admin concluídas

--- a/pages/adicionar-evento.html
+++ b/pages/adicionar-evento.html
@@ -207,7 +207,7 @@
                 </p><br>
 
                 <div class="checkbox-terms-conditions">
-                    <label>
+                    <label for="termos">
                         <input type="checkbox" name="termos" required>
                         Eu li e aceito os termos e condições e a política de privacidade do Ingressa, incluindo a
                         isenção de responsabilidade do Ingressa sobre a execução do evento.
@@ -217,7 +217,7 @@
 
             <div class="cad-events">
                 <label for="submit"></label>
-                <input type="submit" value="Cadastrar evento">
+                <input type="submit" name="submit" value="Cadastrar evento">
             </div>
         </form>
     </section>
