--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -64,10 +64,8 @@
                 </div>
 
                 <div class="cards-title-description">
-                    <span class="title-card">Show do Mc Paiva na Zuhause em copacabana</span>
-                    <p class="description-card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
-                        perspiciatis quasi molestiae officia sunt ratione similique eveniet cumque ipsa, quis minus nam,
-                        aut ipsum omnis recusandae illum assumenda fugit distinctio!</p>
+                    <span class="title-card">Show do Mc Paiva na Zuhause</span>
+                    <p class="description-card">Não perca a Festa do Branco com Mc Paiva ZS na Zuhause! A melhor festa da noite!</p>
                 </div>
 
                 <div class="cards-information">
