adição de html - (mostrar evento) e (cadastrar admin), correção de códigos e bugs

--- a/pages/informacoes-evento.html
+++ b/pages/informacoes-evento.html
@@ -21,8 +21,7 @@
             <nav>
                 <ul>
                     <li><a href="/pages/inicio.html">Início</a></li>
-                    <li><a href="/pages/adicionar-evento.html">Carrinho</a></li>
-                    <li><a href="/locais">Locais</a></li>
+                    <li><a href="/pages/informacoes-evento.html">Carrinho</a></li>
                 </ul>
             </nav>
 
@@ -35,35 +34,70 @@
                     </div>
                 </form>
             </div>
+
+            <div class="profile-icon">
+                <a href="/pages/perfil.html"> <!-- Ajustei o link para algo mais relevante -->
+                    <i class="fas fa-user"></i> <!-- Ícone do perfil -->
+                </a>
+            </div>
+        </header>
     </section>
 
-    <section>
-        <div class="tittle-text-events">
-            <h1>Título do Evento que o Administrador colocar</h1>
-            <p>Descrição do Evento que o Administrador colocar</p>
-        </div>
+    <section id="events-banner">
+        <section>
+            <div class="tittle-text-events">
+                <h1>Título do Evento que o Administrador colocar</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero ad, ducimus praesentium totam ipsam
+                    voluptates dolores tenetur molestias officiis tempore inventore itaque dicta laudantium expedita
+                    aut,
+                    enim iusto dolorum? Voluptatibus.</p>
+            </div>
+
+
+            <section id="infos-evento">
+                <div class="info-event">
+                    <div class="infos-icone">
+                        <i class="fas fa-calendar-alt"></i>
+                        <p class="text-info">20/04/2025</p>
+                    </div>
+
+                    <div class="infos-icone">
+                        <i class="fas fa-calendar-day"></i>
+                        <p class="text-info">Domingo</p>
+                    </div>
+                    <div class="infos-icone">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p class="text-info">Rua das Flores, 123</p>
+                    </div>
+                    <div class="infos-icone">
+                        <i class="fas fa-clock"></i>
+                        <p class="text-info">19:30</p>
+                    </div>
+                </div>
+
+            </section>
+
+            <section id="ingressos-carrinho">
+                <div class="ingressos-valor">
+                    <h2 class="ingresso-tittle">Valor do Ingresso</h2>
+                    <p class="ingresso-valor">R$ 130,00</p>
+                </div>
+
+                <div class="adc-carrinho">
+                    <p class="carrinho">Adicionar ao Carrinho</p>
+                </div>
+            </section>
+        </section>
+
+
+        <section id="foto-banner">
+            <img src="/assets/img/teste-fotomcpaiva.png" alt="Foto do Evento">
+        </section>
     </section>
 
 
 
 
-    <section id="infos-evento">
-
-        <div class="info-event">
-            <p id="data-evento"><strong>Data do Evento - </strong></p>
-            <p id="dia-semana"><strong>Dia da Semana - </strong></p>
-            <p id="endereco-evento"><strong>Endereço do Evento - </strong></p>
-
-        </div>
-
-
-
-        <div class="-info-description">
-
-
-
-
-        </div>
 
 
 
@@ -80,13 +114,6 @@
 
 
 
-
-
-
-
-
-
-    </section>
 
 
 
