--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -21,8 +21,7 @@
             <nav>
                 <ul>
                     <li><a href="/pages/inicio.html">Início</a></li>
-                    <li><a href="/pages/adicionar-evento.html">Carrinho</a></li>
-                    <li><a href="/locais">Locais</a></li>
+                    <li><a href="/pages/carrinho.html">Carrinho</a></li>
                 </ul>
             </nav>
 
