adição de carrinho, ajustes em css, etc

--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -42,4 +42,56 @@
             </div>
         </header>
     </section>
+
+    <section>
+        <div class="cards-tittle-description">
+            <h1 class="tittle-inicio">Carrinho de Compras</h1>
+            <p class="text-inicio">Confira seus itens favoritos e finalize sua compra com facilidade pelo Carrinho
+                Ingressa.
+            </p>
+        </div>
+    </section>
+
+
+    <section class="carrinho-compra">
+        <div>
+            <table class="tabela-ingresso">
+                <tr class="teste-tabela">
+                    <td>Foto</td>
+                    <td>Ingresso</td>
+                    <td>Quantidade</td>
+                    <td>Valor</td>
+                </tr>
+            </table>
+        </div>
+
+        <div class="pagamento-ingresso">
+            <div>
+                <strong class="title-carrinho">Resumo de Compra</strong>
+            </div>
+
+            <div class="options-valores">
+                <div class="list-option">
+                    <strong>Valor Total</strong>
+                    <p>teste</p>
+                </div>
+                <div class="list-option">
+                    <strong>Subtotal</strong>
+                    <p>teste</p>
+                </div>
+            </div>
+            <div class="option-valores2">
+                <div class="list-option">
+                    <strong>Total:</strong>
+                    <strong>R$150,00</strong>
+                </div>
+
+                <div class="list-pagamento">
+                    <button type="submit">Pagamento</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </body>
