adição de carrinho, estilização e html

--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -54,19 +54,29 @@
 
 
     <section class="carrinho-compra">
-        <div>
-            <table class="tabela-ingresso">
-                <tr class="teste-tabela">
-                    <td>Foto</td>
-                    <td>Ingresso</td>
-                    <td>Quantidade</td>
-                    <td>Valor</td>
-                </tr>
-            </table>
+        <div class="ingresso-informacoes">
+            <div class="ingresso-linha">
+                <img src="/assets/img/teste-fotomcpaiva.png" alt="">
+                <div class="info-evento">
+                    <strong class="titulo-ingresso">Show do Mc Paiva</strong>
+                    <p>teste</p>
+                </div>
+
+                <div class="info-evento">
+                    <strong class="qntd-ingresso">Qntd. Ingresso</strong>
+                    <p>1</p>
+                </div>
+
+                <div class="info-evento">
+                    <strong class="valor-ingresso">Valor</strong>
+                    <p>R$150,00</p>
+                </div>
+            </div>
         </div>
 
         <div class="pagamento-ingresso">
-            <div>
+            <div class="tittle-icone">
+                <i class="fas fa-shopping-cart"></i>
                 <strong class="title-carrinho">Resumo de Compra</strong>
             </div>
 
@@ -82,8 +92,8 @@
             </div>
             <div class="option-valores2">
                 <div class="list-option">
-                    <strong>Total:</strong>
-                    <strong>R$150,00</strong>
+                    <strong>Total</strong>
+                    <p>R$150,00</p>
                 </div>
 
                 <div class="list-pagamento">
