--- a/pages/login-admin.html
+++ b/pages/login-admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="assets/icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style-login.css">
+    <link rel="stylesheet" href="/css/style-login-admin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Login</title>
 
@@ -21,11 +21,10 @@
 
         <section class="lado-direito">
             <div class="tittle-description">
-                <h1 class="login-tittle">Faça seu Login</h1>
+                <h1 class="login-tittle">Login Administrador</h1>
                 <p class="login-text">
-                    Acesse sua conta no Ingressa e adquira ingressos de forma rápida, prática e segura. Não perca
-                    tempo,
-                    garanta sua entrada para os melhores eventos e shows.
+                    Cadastre seus eventos no Ingressa e acompanhe vendas em tempo real com praticidade, controle total e
+                    segurança na gestão.
                 </p>
             </div>
 
@@ -33,8 +32,8 @@
             <form id="forms-logar">
 
                 <div class="input-email">
-                    <i class="fas fa-envelope"></i> <!-- Ícone de envelope -->
-                    <input type="email" id="email" name="email" placeholder="Email" required>
+                    <i class="fas fa-id-card"></i> <!-- Ícone de cartão de identificação -->
+                    <input type="text" id="cpf" name="cpf" placeholder="CPF" required>
                 </div>
 
                 <div class="input-senha">
@@ -52,17 +51,14 @@
                 </div>
 
                 <div class="create-account">
-                    <p>Não tem conta?</p>
-                    <a href="/pages/cadastro.html">Criar conta</a>
-                    <p>ou</p>
-                    <a href="/pages/login-admin.html">Entrar como Administrador</a>
+                    <a href="/pages/login.html">Entrar como Usuário</a>
                 </div>
             </form>
         </section>
     </section>
 
 
-    <script src="/scripts/login.js"></script>
+    <script src="/scripts/login-admin.js"></script>
 </body>
 
 </html>
